src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Global_ID__c</fullName>
        <description>ABB Global ID for Global Products.</description>
        <label>ABB Global ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GHP__c</fullName>
        <label>GHP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BU__c</fullName>
        <description>BU - Global Business Unit for a Global product, and Local business unit for a local product</description>
        <inlineHelpText>BU - Global Business Unit for a Global product, and Local business unit for a local product</inlineHelpText>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>LPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPWA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country_Code__c</fullName>
        <description>Country Code for Local Products.</description>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country_Market_Type__c</fullName>
        <description>Country Market Availability Type - Global Products.</description>
        <label>Country Market Availability Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_EAN_Code__c</fullName>
        <description>Local EAN Code - Local Products and EAN Code - Global Products.</description>
        <inlineHelpText>Local EAN Code - Local Products and EAN Code - Global Products.</inlineHelpText>
        <label>EAN Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External Id Field. This is used while copying records from staging to normal object</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
<fields>
        <fullName>APTS_ProductType__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>APTS_Product_Line_Tree_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line Tree</label>
        <referenceTo>APTS_Product_Line_Tree__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductsLineTree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Formula_ABB_Global_ID__c</fullName>
        <formula>APTS_Global_Product_ID__r.APTS_ABB_Global_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Global ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Product_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup to Product to map Global Product Id with Local Product.</description>
        <label>Global Product ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code__c</fullName>
        <description>Level 3 Hierarchy Code</description>
        <label>Hierarchy Level 3 Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_4_Code__c</fullName>
        <description>Level 4 Hierarchy Code</description>
        <label>Hierarchy Level 4 Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Related_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Code_2__c</fullName>
        <description>Offering Tree Classification node ID 2 - Global Products.</description>
        <label>Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Is_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only if Product Hierarchy is created.</description>
        <label>Is Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Hierarchy__c</fullName>
        <description>Offering Tree Classification node ID 1 - Global Products.</description>
        <label>Product Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organization__c</fullName>
        <defaultValue>$User.Division  &amp; &quot;-&quot; &amp;  $User.Country</defaultValue>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Life_Cycle_Phase__c</fullName>
        <label>Life Cycle Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_MDF_Code__c</fullName>
        <description>Local MDF Code - Local Products and MDF Code- Global Products.</description>
        <inlineHelpText>Local MDF Code - Local Products and MDF Code- Global Products.</inlineHelpText>
        <label>MDF Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Offering_Tree_Classification_ID_1__c</fullName>
        <label>Offering Tree Classification node ID 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Offering_Tree_Classification_ID_2__c</fullName>
        <label>Offering Tree Classification node ID 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PG__c</fullName>
        <description>Local PG - Local Products and PG - Global Products.</description>
        <inlineHelpText>Local PG - Local Products and PG - Global Products.</inlineHelpText>
        <label>PG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_ID__c</fullName>
        <description>Local Product ID for Local Products Record Type and Product ID for Global Products Record Type.</description>
        <label>Product ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_ID__c</fullName>
        <label>Product Line ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_Tree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To link Global and Local Products.</description>
        <label>Product Line Tree</label>
        <referenceTo>APTS_Product_Line_Tree__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductLineTree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Type_ID__c</fullName>
        <description>Product Type ID - Global Products.</description>
        <label>Product Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Produt_Sales_Status__c</fullName>
        <label>Product Sales Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<recordTypes>
        <fullName>APTS_Global_Products</fullName>
        <active>true</active>
        <description>These are products from ABB Global Offering Tree.</description>
        <label>Global Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Local_Hierarchy</fullName>
        <active>true</active>
        <description>These are Category Level 4 products.</description>
        <label>Local Hierarchy</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Local_Products</fullName>
        <active>true</active>
        <description>These are LP country specific products.</description>
        <label>Local Products</label>
    </recordTypes>
</CustomObject>